design_Rueckmeldungen und Einstellungen angepasst

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -10,7 +10,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/settings_button_copyright"
         android:background="@drawable/button_border"
-        android:drawableLeft="@mipmap/ic_thums_black"
+        android:drawableLeft="@mipmap/ic_launcher_foregraound2"
         android:paddingLeft="5dp"
         android:shape="rectangle"
         android:text="@string/feedback_zur_app_text"
@@ -24,7 +24,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/settings_button_settings"
         android:background="@drawable/button_border"
-        android:drawableLeft="@mipmap/ic_info_black"
+        android:drawableLeft="@mipmap/ic_info_black2"
         android:paddingLeft="5dp"
         android:shape="rectangle"
         android:text="@string/support_text"
@@ -38,7 +38,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/settings_button_support"
         android:background="@drawable/button_border"
-        android:drawableLeft="@mipmap/ic_gavel_black"
+        android:drawableLeft="@mipmap/ic_gavel_black2"
         android:paddingLeft="5dp"
         android:shape="rectangle"
         android:text="@string/copyright_text"
@@ -49,12 +49,12 @@
         android:id="@+id/settings_button_settings"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="35dp"
         android:background="@drawable/button_border"
-        android:drawableLeft="@mipmap/ic_settings_black"
+        android:drawableLeft="@mipmap/ic_setting_black2"
+        android:paddingLeft="5dp"
         android:text="@string/settings_text"
         android:textAlignment="textStart"
         android:textSize="18sp" />
