--- a/app/src/main/res/layout/fragment_participants_list.xml
+++ b/app/src/main/res/layout/fragment_participants_list.xml
@@ -13,41 +13,49 @@
 
         <TextView
             android:id="@+id/textViewTitleParticipantsEvent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="153dp"
+            android:layout_height="33dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="36dp"
             android:text="@string/titleParticipantsEvent"
+            android:textAlignment="center"
+            android:textColor="@color/zentea_darkgreen"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.502"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textViewEventData"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="140dp"
+            android:layout_height="26dp"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:text=""
+            android:textAlignment="center"
             app:layout_constraintBottom_toTopOf="@+id/swiperefresh"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewTitleParticipantsEvent" />
 
 
-        <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/swiperefresh"
-            android:layout_width="317dp"
-            android:layout_height="471dp"
-            android:layout_marginBottom="8dp"
+            android:layout_width="368dp"
+            android:layout_height="408dp"
+            android:layout_marginBottom="16dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/rect_listview_frame"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewEventData">
 
 
             <LinearLayout
@@ -57,10 +65,11 @@
 
                 <ListView
                     android:id="@+id/ParticipantsList"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="352dp"
+                    android:layout_height="421dp"
                     android:layout_weight="1"
-                    android:divider="@android:color/darker_gray"
+                    android:cacheColorHint="@color/zentea_darkgreen"
+                    android:divider="@color/zentea_darkgreen"
                     android:dividerHeight="1dp"
                     android:listSelector="@drawable/list_selector" />
 
