--- a/app/src/main/res/layout/fragment_accepted_event_details.xml
+++ b/app/src/main/res/layout/fragment_accepted_event_details.xml
@@ -121,5 +121,20 @@
             app:layout_constraintTop_toBottomOf="@+id/acceptedEventDetailsButtonShowQR"
             app:layout_constraintVertical_bias="0.152" />
 
+        <Button
+            android:id="@+id/acceptedEventDetailsButtonDelete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/event_delete"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/acceptedEventDetailsButtonShowQR"
+            app:layout_constraintVertical_bias="0.497" />
+
     </android.support.constraint.ConstraintLayout>
 </FrameLayout>
