--- a/app/src/main/res/layout/fragment_participants_list.xml
+++ b/app/src/main/res/layout/fragment_participants_list.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".view.ParticipantsListFragment">
 
+
     <android.support.constraint.ConstraintLayout
         android:id="@+id/layoutOverview2"
         android:layout_width="match_parent"
@@ -51,21 +52,32 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="2dp"
             android:layout_marginTop="16dp"
+            android:clickable="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewEventData">
 
-            <ListView
-                android:id="@+id/ParticipantsList"
-                android:layout_width="380dp"
-                android:layout_height="270dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/textViewEventData" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
+                <ListView
+                    android:id="@+id/ParticipantsList"
+                    android:layout_width="380dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="8dp"
+                    android:dividerHeight="0dp"
+                    android:drawSelectorOnTop="true"
+                    android:layoutMode="clipBounds"
+                    android:scrollbarStyle="outsideOverlay"
+                    android:tag="@string/bottom_sheet_behavior"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/textViewEventData" />
+            </LinearLayout>
         </android.support.v4.widget.SwipeRefreshLayout>
     </android.support.constraint.ConstraintLayout>
+
 </FrameLayout>
