--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -4,6 +4,8 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
+    android:layout_centerVertical="true"
+    android:textAlignment="center"
     android:padding="5dip">
 
 
@@ -12,11 +14,12 @@
         android:id="@+id/participantName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
-        android:textColor="#040404"
+        android:textAlignment="center"
+        android:layout_centerVertical="true"
+        android:textAllCaps="true"
         android:textSize="15dip"
         android:textStyle="bold"
-        android:typeface="sans" />
+        android:typeface="normal" />
 
     <!-- Rightend Arrow -->
     <ImageView
