--- a/app/src/main/res/layout/fragment_new_event.xml
+++ b/app/src/main/res/layout/fragment_new_event.xml
@@ -7,9 +7,26 @@
     android:background="?android:windowBackground"
     android:orientation="vertical">
 
+
+    <TextView
+        android:id="@+id/newEventTab"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="10dp"
+        android:text="@string/newEvent"
+        android:textAlignment="center"
+        android:textColor="@color/zentea_darkgreen"
+        android:textSize="25sp" />
+
     <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="50dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -18,19 +35,6 @@
             android:layout_alignParentTop="true"
             android:focusable="false"
             android:focusableInTouchMode="true">
-
-            <TextView
-                android:id="@+id/newEventTab"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="10dp"
-                android:text="@string/newEvent"
-                android:textAlignment="center"
-                android:textColor="@color/zentea_darkgreen"
-                android:textSize="25sp" />
 
 
             <EditText
@@ -44,7 +48,8 @@
                 android:layout_alignParentEnd="true"
                 android:layout_below="@+id/newEvent_textEdit_shortTitle"
                 android:ems="8"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:textSize="16sp" />
 
 
             <TextView
@@ -58,7 +63,8 @@
                 android:layout_alignBaseline="@+id/newEvent_editText_description"
                 android:layout_alignParentStart="true"
                 android:layout_marginLeft="10dp"
-                android:text="@string/event_Description" />
+                android:text="@string/event_Description"
+                android:textSize="16sp" />
 
 
             <TextView
@@ -72,7 +78,8 @@
                 android:layout_alignBaseline="@+id/newEvent_editText_Date"
                 android:layout_alignParentStart="true"
                 android:layout_marginLeft="10dp"
-                android:text="@string/event_date" />
+                android:text="@string/event_date"
+                android:textSize="16sp" />
 
 
             <EditText
@@ -85,7 +92,8 @@
 
                 android:layout_alignParentEnd="true"
                 android:layout_below="@+id/newEvent_textEdit_room"
-                android:ems="8" />
+                android:ems="8"
+                android:textSize="16sp" />
 
 
             <TextView
@@ -95,11 +103,11 @@
                 android:layout_width="wrap_content"
 
                 android:layout_height="wrap_content"
-
                 android:layout_alignBaseline="@+id/newEvent_editText_startTime"
                 android:layout_alignParentStart="true"
                 android:layout_marginLeft="10dp"
-                android:text="@string/event_startTime" />
+                android:text="@string/event_startTime"
+                android:textSize="16sp" />
 
 
             <EditText
@@ -113,7 +121,8 @@
                 android:layout_alignParentEnd="true"
                 android:layout_below="@+id/newEvent_editText_Date"
                 android:ems="8"
-                android:focusable="true" />
+                android:focusable="true"
+                android:textSize="16sp" />
 
 
             <TextView
@@ -129,7 +138,8 @@
                 android:layout_alignParentTop="true"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="189dp"
-                android:text="@string/event_endtime" />
+                android:text="@string/event_endtime"
+                android:textSize="16sp" />
 
 
             <EditText
@@ -142,7 +152,8 @@
                 android:layout_alignParentEnd="true"
                 android:layout_below="@+id/newEvent_editText_startTime"
                 android:ems="8"
-                android:focusable="true" />
+                android:focusable="true"
+                android:textSize="16sp" />
 
 
             <CheckBox
@@ -188,6 +199,7 @@
 
                 android:paddingLeft="10dp"
                 android:text="@string/event_endOfRepetition"
+                android:textSize="16sp"
                 android:visibility="gone" />
 
 
@@ -204,6 +216,7 @@
                 android:ems="8"
                 android:focusable="false"
                 android:focusableInTouchMode="true"
+                android:textSize="16sp"
                 android:visibility="gone" />
 
 
@@ -211,17 +224,17 @@
 
                 android:id="@+id/newEvent_button_save"
 
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
 
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
 
                 android:layout_alignParentBottom="true"
+
                 android:layout_below="@id/newEvent_textView_endOfRepetiton"
                 android:layout_centerHorizontal="true"
-
                 android:backgroundTint="@color/zentea_darkgreen"
                 android:text="@string/event_save"
-                android:textColor="@color/ic_launcher_background" />
+                android:textColor="@color/zentea_white" />
 
 
             <TextView
@@ -235,7 +248,8 @@
                 android:layout_alignBaseline="@+id/newEvent_textEdit_room"
                 android:layout_alignParentStart="true"
                 android:layout_marginLeft="10dp"
-                android:text="@string/event_room" />
+                android:text="@string/event_room"
+                android:textSize="16sp" />
 
 
             <EditText
@@ -250,7 +264,8 @@
                 android:layout_below="@+id/newEvent_editText_description"
                 android:ems="8"
                 android:imeOptions="actionDone"
-                android:inputType="text" />
+                android:inputType="text"
+                android:textSize="16sp" />
 
             <EditText
                 android:id="@+id/newEvent_textEdit_shortTitle"
@@ -260,7 +275,8 @@
                 android:layout_alignParentEnd="true"
                 android:layout_below="@+id/newEventTab"
                 android:ems="8"
-                android:inputType="text" />
+                android:inputType="text"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/newEvent_textView_shortTitle"
@@ -269,7 +285,8 @@
                 android:layout_alignBaseline="@+id/newEvent_textEdit_shortTitle"
                 android:layout_alignParentStart="true"
                 android:layout_marginLeft="10dp"
-                android:text="@string/event_shortTitle" />
+                android:text="@string/event_shortTitle"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/newEvent_textVire_userName"
@@ -278,7 +295,8 @@
                 android:layout_alignBaseline="@+id/unewEvent_textEdit_userName"
                 android:layout_alignParentStart="true"
                 android:layout_marginLeft="10dp"
-                android:text="@string/username_text" />
+                android:text="@string/username_text"
+                android:textSize="16sp" />
 
             <EditText
                 android:id="@+id/unewEvent_textEdit_userName"
@@ -287,7 +305,8 @@
                 android:layout_alignParentEnd="true"
                 android:layout_below="@+id/newEvent_textEdit_endTime"
                 android:ems="8"
-                android:inputType="text" />
+                android:inputType="text"
+                android:textSize="16sp" />
 
 
         </RelativeLayout>
