Added icons for QR and participant buttons

--- a/app/src/main/res/layout/fragment_accepted_event_details.xml
+++ b/app/src/main/res/layout/fragment_accepted_event_details.xml
@@ -64,6 +64,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="40dp"
             android:background="@color/zentea_darkgreen"
+            android:drawableEnd="@drawable/ic_qr1"
             android:text="@string/savingSuccessful_qrcode"
             android:textColor="@android:color/background_light"
             android:textSize="14sp"
