Added icons for QR and participant buttons in dateview

--- a/app/src/main/res/layout/fragment_accepted_event_details.xml
+++ b/app/src/main/res/layout/fragment_accepted_event_details.xml
@@ -65,6 +65,8 @@
             android:layout_marginTop="40dp"
             android:background="@color/zentea_darkgreen"
             android:drawableEnd="@drawable/ic_qr1"
+            android:paddingEnd="5dp"
+            android:paddingStart="30dp"
             android:text="@string/savingSuccessful_qrcode"
             android:textColor="@android:color/background_light"
             android:textSize="14sp"
@@ -83,6 +85,7 @@
             android:layout_marginTop="8dp"
             android:background="@color/zentea_darkgreen"
             android:drawableEnd="@drawable/ic_mydate_rejected_white"
+            android:paddingEnd="5dp"
             android:paddingStart="30dp"
             android:text="@string/refuseAppointment"
             android:textAlignment="center"
