--- a/app/src/main/res/layout/fragment_saved_event_details.xml
+++ b/app/src/main/res/layout/fragment_saved_event_details.xml
@@ -72,6 +72,7 @@
             android:layout_marginTop="8dp"
             android:background="@color/zentea_darkgreen"
             android:drawableEnd="@drawable/ic_mydate_approved_white"
+            android:paddingEnd="5dp"
             android:paddingLeft="30dp"
             android:text="@string/acceptAppointment"
             android:textColor="@android:color/background_light"
@@ -90,6 +91,7 @@
             android:layout_marginTop="8dp"
             android:background="@color/zentea_darkgreen"
             android:drawableEnd="@drawable/ic_mydate_rejected_white"
+            android:paddingEnd="5dp"
             android:paddingLeft="30dp"
             android:text="@string/refuseAppointment"
             android:textColor="@android:color/background_light"
@@ -110,6 +112,8 @@
             android:layout_marginTop="20dp"
             android:background="@color/zentea_darkgreen"
             android:drawableEnd="@drawable/ic_qr1"
+            android:paddingEnd="5dp"
+            android:paddingStart="30dp"
             android:text="@string/savingSuccessful_qrcode"
             android:textColor="@android:color/background_light"
             android:textSize="14sp"
