--- a/app/src/main/res/layout/fragment_my_own_event_details.xml
+++ b/app/src/main/res/layout/fragment_my_own_event_details.xml
@@ -60,6 +60,9 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="50dp"
             android:background="@color/zentea_darkgreen"
+            android:drawableEnd="@drawable/ic_qr1"
+            android:paddingEnd="5dp"
+            android:paddingStart="30dp"
             android:text="@string/savingSuccessful_qrcode"
             android:textColor="@android:color/background_light"
             android:textSize="14sp"
@@ -79,6 +82,9 @@
             android:layout_marginStart="8dp"
 
             android:background="@color/zentea_darkgreen"
+            android:drawableEnd="@drawable/ic_answers"
+            android:paddingEnd="5dp"
+            android:paddingStart="30dp"
             android:text="@string/show_Response"
             android:textColor="@android:color/background_light"
             android:textSize="14sp"
