--- a/app/src/main/res/layout/fragment_new_event.xml
+++ b/app/src/main/res/layout/fragment_new_event.xml
@@ -160,9 +160,7 @@
             <CheckBox
 
                 android:id="@+id/newEvent_checkBox_SerialEvent"
-
                 android:layout_width="wrap_content"
-
                 android:layout_height="73dp"
 
                 android:layout_alignParentStart="true"
@@ -170,13 +168,15 @@
                 android:layout_below="@id/newEvent_textVire_userName"
 
                 android:checked="false"
-                android:text="@string/event_serialEvent" />
+
+                android:text="@string/event_serialEvent"
+                android:textSize="16sp" />
 
 
             <Spinner
 
                 android:id="@+id/newEvent_spinner_repetition"
-                android:layout_width="204dp"
+                android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:layout_alignBaseline="@id/newEvent_checkBox_SerialEvent"
 
@@ -227,7 +227,7 @@
 
                 android:layout_width="match_parent"
 
-                android:layout_height="50dp"
+                android:layout_height="60dp"
 
                 android:layout_alignParentBottom="true"
 
@@ -273,8 +273,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:layout_alignParentEnd="true"
                 android:layout_alignBaseline="@id/newEvent_textEdit_shortTitle"
+                android:layout_alignParentEnd="true"
                 android:ems="8"
                 android:inputType="text"
                 android:textSize="16sp" />
