--- a/app/src/main/res/layout/fragment_new_event.xml
+++ b/app/src/main/res/layout/fragment_new_event.xml
@@ -36,15 +36,13 @@
             <EditText
 
                 android:id="@+id/newEvent_editText_description"
-
                 android:layout_width="wrap_content"
-
                 android:layout_height="wrap_content"
-
                 android:layout_alignParentEnd="true"
                 android:layout_below="@+id/newEvent_textEdit_shortTitle"
                 android:ems="8"
-                android:inputType="textPersonName" />
+                android:imeOptions="actionDone"
+                android:inputType="textMultiLine" />
 
 
             <TextView
