participantsListFragment - icon "X" customized

--- a/app/src/main/res/layout/fragment_settings_settings.xml
+++ b/app/src/main/res/layout/fragment_settings_settings.xml
@@ -82,9 +82,8 @@
         android:id="@+id/settings_settings_spinner_minutes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@id/settings_settings_textView_reminder"
         android:layout_alignTop="@+id/settings_settings_textView_reminder"
-        android:layout_centerHorizontal="true"
+        android:layout_toEndOf="@+id/settings_settings_textView_allowPush"
         android:entries="@array/push_times"
         android:prompt="@string/calendar"
         android:visibility="visible" />
