--- a/app/src/main/res/layout/fragment_qrgenerator.xml
+++ b/app/src/main/res/layout/fragment_qrgenerator.xml
@@ -42,7 +42,7 @@
                 android:layout_width="0dp"
                 android:layout_height="364dp"
                 android:layout_marginStart="10dp"
-                android:paddingBottom="10dp"
+                android:paddingBottom="60dp"
                 android:paddingEnd="10dp"
                 android:paddingStart="10dp"
                 android:paddingTop="0dp"
@@ -54,10 +54,11 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="30dp"
                     android:layout_marginTop="10dp"
                     android:orientation="vertical"
-                    android:paddingBottom="20dp">
+                    android:paddingBottom="40dp">
 
                     <TextView
                         android:id="@+id/qrGenerator_textView_description"
@@ -78,8 +79,8 @@
                         android:layout_height="248dp"
                         android:layout_alignParentBottom="true"
                         android:layout_centerHorizontal="true"
-                        android:layout_marginBottom="20dp"
                         android:layout_gravity="center_horizontal"
+                        android:layout_marginBottom="20dp"
                         tools:layout_editor_absoluteX="83dp"
                         tools:layout_editor_absoluteY="220dp" />
 
