--- a/app/src/main/res/layout/fragment_accepted_event_details.xml
+++ b/app/src/main/res/layout/fragment_accepted_event_details.xml
@@ -21,12 +21,12 @@
 
         <TextView
             android:id="@+id/acceptedEventappointmentIsFromText"
-            android:layout_width="92dp"
+            android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="20dp"
             android:text="@string/appointmentIsFrom"
-            android:textSize="16dp"
+            android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -36,9 +36,9 @@
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="20dp"
             android:text=""
-            android:textSize="16dp"
+            android:textSize="18sp"
             app:layout_constraintStart_toEndOf="@+id/acceptedEventappointmentIsFromText"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -48,7 +48,6 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="15dp"
             android:text=""
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -82,7 +81,7 @@
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="5dp"
             android:background="@color/zentea_darkgreen"
             android:drawableEnd="@drawable/ic_mydate_rejected_white"
             android:paddingEnd="5dp"
@@ -101,7 +100,8 @@
         <ScrollView
             android:id="@+id/scrollView2"
             android:layout_width="0dp"
-            android:layout_height="203dp"
+            android:layout_height="213dp"
+            android:layout_marginBottom="27dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="20dp"
@@ -110,6 +110,7 @@
             android:paddingEnd="10dp"
             android:paddingStart="10dp"
             android:paddingTop="10dp"
+            app:layout_constraintBottom_toTopOf="@+id/acceptedEventDetailsButtonShowQR"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
