--- a/app/src/main/res/layout/fragment_saved_event_details.xml
+++ b/app/src/main/res/layout/fragment_saved_event_details.xml
@@ -22,12 +22,12 @@
         <TextView
             android:id="@+id/savedEventappointmentIsFromText"
 
-            android:layout_width="92dp"
+            android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="20dp"
             android:text="@string/appointmentIsFrom"
-            android:textSize="16dp"
+            android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -39,9 +39,9 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="21dp"
+            android:layout_marginTop="20dp"
             android:text=""
-            android:textSize="16dp"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/savedEventappointmentIsFromText"
@@ -54,15 +54,13 @@
             android:layout_marginBottom="10dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
             android:text=""
             android:textSize="12sp"
             app:layout_constraintBottom_toTopOf="@+id/scrollView2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.057"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/savedEventDetailsOrganisatorText"
-            />
+            app:layout_constraintTop_toBottomOf="@+id/savedEventDetailsOrganisatorText" />
 
         <Button
             android:id="@+id/savedEventDetailsButtonAcceptAppointment"
