--- a/app/src/main/res/layout/fragment_event_reject_event.xml
+++ b/app/src/main/res/layout/fragment_event_reject_event.xml
@@ -71,7 +71,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="30dp"
             android:ems="10"
-            android:inputType="text|textMultiLine|textPersonName" />
+            android:inputType="text|textMultiLine|textPersonName"
         android:hint="@string/furtherDetails"
         android:textSize="14sp" />
     </RelativeLayout>
