--- a/app/src/main/res/layout/fragment_settings_settings.xml
+++ b/app/src/main/res/layout/fragment_settings_settings.xml
@@ -86,6 +86,7 @@
         android:layout_toEndOf="@+id/settings_settings_textView_reminder"
         android:entries="@array/push_times"
         android:prompt="@string/calendar"
+        android:layout_marginStart="10dp"
         android:visibility="visible" />
 
     <TextView
