--- a/app/src/main/res/layout/fragment_new_event.xml
+++ b/app/src/main/res/layout/fragment_new_event.xml
@@ -41,18 +41,15 @@
                 android:layout_alignParentEnd="true"
                 android:layout_below="@+id/newEvent_textEdit_shortTitle"
                 android:ems="8"
-                android:imeOptions="actionDone"
-                android:inputType="textMultiLine" />
+                android:imeOptions="actionNext"
+                android:inputType="text|textMultiLine" />
 
 
             <TextView
 
                 android:id="@+id/newEvent_textView_Description"
-
                 android:layout_width="wrap_content"
-
                 android:layout_height="wrap_content"
-
                 android:layout_alignBaseline="@+id/newEvent_editText_description"
                 android:layout_alignParentStart="true"
                 android:layout_marginLeft="10dp"
@@ -237,24 +234,19 @@
 
 
             <EditText
-
                 android:id="@+id/newEvent_textEdit_room"
-
                 android:layout_width="wrap_content"
-
                 android:layout_height="wrap_content"
-
                 android:layout_alignParentEnd="true"
                 android:layout_below="@+id/newEvent_editText_description"
                 android:ems="8"
                 android:imeOptions="actionDone"
-                android:inputType="text" />
+                android:singleLine="true" />
 
             <EditText
                 android:id="@+id/newEvent_textEdit_shortTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
                 android:layout_alignParentEnd="true"
                 android:layout_below="@+id/newEventTab"
                 android:ems="8"
