--- a/app/src/main/res/layout/fragment_event_reject_event.xml
+++ b/app/src/main/res/layout/fragment_event_reject_event.xml
@@ -57,11 +57,11 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="20dp"
-            android:paddingEnd="5dp"
-            android:paddingStart="30dp"
             android:backgroundTint="@color/zentea_darkgreen"
             android:drawableEnd="@drawable/ic_mydate_rejected_white"
-            android:text="Termin absagen"
+            android:paddingEnd="5dp"
+            android:paddingStart="30dp"
+            android:text="Termin ablehnen"
             android:textColor="@color/zentea_white" />
 
         <EditText
