--- a/app/src/main/res/layout/fragment_participants_list.xml
+++ b/app/src/main/res/layout/fragment_participants_list.xml
@@ -31,8 +31,8 @@
 
         <TextView
             android:id="@+id/textViewEventData"
-            android:layout_width="188dp"
-            android:layout_height="27dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
