--- a/app/src/main/res/layout/fragment_settings_settings.xml
+++ b/app/src/main/res/layout/fragment_settings_settings.xml
@@ -82,11 +82,12 @@
         android:id="@+id/settings_settings_spinner_minutes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
         android:layout_alignTop="@+id/settings_settings_textView_reminder"
-        android:layout_toEndOf="@+id/settings_settings_textView_reminder"
+        android:layout_marginEnd="112dp"
         android:entries="@array/push_times"
         android:prompt="@string/calendar"
-        android:layout_marginStart="10dp"
+        android:textAlignment="viewEnd"
         android:visibility="visible" />
 
     <TextView
