--- a/app/src/main/res/layout/fragment_new_event.xml
+++ b/app/src/main/res/layout/fragment_new_event.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?android:windowBackground"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
     <ScrollView
         android:layout_width="wrap_content"
@@ -71,13 +73,9 @@
 
 
             <EditText
-
                 android:id="@+id/newEvent_editText_Date"
-
                 android:layout_width="wrap_content"
-
                 android:layout_height="wrap_content"
-
                 android:layout_alignParentEnd="true"
                 android:layout_below="@+id/newEvent_textEdit_room"
                 android:ems="8" />
@@ -240,8 +238,9 @@
                 android:layout_alignParentEnd="true"
                 android:layout_below="@+id/newEvent_editText_description"
                 android:ems="8"
+                android:singleLine="true"
                 android:imeOptions="actionDone"
-                android:singleLine="true" />
+                />
 
             <EditText
                 android:id="@+id/newEvent_textEdit_shortTitle"
