BUM09: action type changed from done to next after false number input

--- a/app/src/main/res/layout/fragment_settings_settings.xml
+++ b/app/src/main/res/layout/fragment_settings_settings.xml
@@ -140,6 +140,7 @@
         android:layout_alignParentEnd="true"
         android:layout_below="@+id/settings_settings_editText_username"
         android:ems="8"
+        android:imeOptions="actionDone"
         android:hint="@string/phoneNumberHint"
         android:inputType="phone"
         android:textSize="14sp" />
