--- a/app/src/main/res/layout/dialog_askingforphonenumber.xml
+++ b/app/src/main/res/layout/dialog_askingforphonenumber.xml
@@ -18,6 +18,7 @@
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="15dp"
+        android:imeOptions="actionDone"
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:hint="@string/phoneNumber_hint"
