Design final Adaptations

--- a/app/src/main/res/layout/fragment_qrgenerator.xml
+++ b/app/src/main/res/layout/fragment_qrgenerator.xml
@@ -99,6 +99,9 @@
                 android:text="@string/share_with"
                 android:textColor="@android:color/background_light"
                 android:textSize="14sp"
+                android:drawableEnd="@drawable/ic_share"
+                android:paddingEnd="5dp"
+                 android:paddingStart="30dp"
                 app:layout_constraintBottom_toTopOf="@+id/qrGenerator_button_goToWhereComesFrom"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -118,6 +121,9 @@
                 android:text="@string/back_where_user_comesFrom"
                 android:textColor="@android:color/background_light"
                 android:textSize="14sp"
+                android:drawableEnd="@drawable/ic_uebersicht"
+                android:paddingEnd="5dp"
+                android:paddingStart="30dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
